<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".NewRecipeActivity">

    <EditText
        android:id="@+id/recipeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recipeText"
        android:inputType="text"
        android:textSize="30sp"
        android:importantForAutofill="no"/>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/ingredientlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ingredientText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/ingredientsText"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/directionlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/directionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/directionText"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/addrecipebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addrecipebtn" />

</LinearLayout>