<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#F2F2F2"
            android:contentDescription="@string/add_description"
            android:tint="#000000"
            app:srcCompat="@android:drawable/ic_input_add"
            android:onClick="onAddClicked"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#F2F2F2"
            android:contentDescription="@string/delete_description"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:onClick="onDeleteClicked"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>